  implementations from HWCAP subdirectories are no longer loaded.
  Instead, the default implementation is used.

* The deprecated <sys/timeb.h> header and the ftime function have been
  removed.  To support old binaries, the ftime function continue to exist
  as a compatibility symbol (on those architectures which had it).  All
  programs should use gettimeofday or clock_gettime instead.

Changes to build and runtime requirements:

* On Linux, the system administrator needs to configure /dev/pts with
  the intended access modes for pseudo-terminals.  glibc no longer
  attemps to adjust permissions of terminal devices.  The previous glibc
  defaults ("tty" group, user read/write and group write) already
  corresponded to what most systems used, so that grantpt did not
  perform any adjustments.

* On Linux, the posix_openpt and getpt functions no longer attempt to
  use legacy (BSD) pseudo-terminals and assume that if /dev/ptmx exists
  (and pseudo-terminals are supported), a devpts file system is mounted
  on /dev/pts.  Current systems already meet these requirements.

Security related changes:

  [Add security related changes here]

The following bugs are resolved with this release:

  [The release manager will add the list generated by
  scripts/list-fixed-bugs.py just before the release.]


Version 2.32

Major new features:

* Unicode 13.0.0 Support: Character encoding, character type info, and
  transliteration tables are all updated to Unicode 13.0.0, using
  generator scripts contributed by Mike FABIAN (Red Hat).

* New locale added: ckb_IQ (Kurdish/Sorani spoken in Iraq)

* Support for Synopsys ARC HS cores (ARCv2 ISA) running Linux has been
  added. This port requires at least binutils-2.32, gcc-8.3 and Linux-5.1.
  Three ABIs are supported:

     - arc-linux-gnu
     - arc-linux-gnuhf
     - arceb-linux-gnu

  The arc* ABI is little-endian while arceb is big-endian. All ABIs use
  64-bit time (y2038 safe) and 64-bit file offsets (LFS default).
